ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iem-ingress
  namespace: iem
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    #
    # Hostname for accessing the IEM e.g. iem.siemens.com
    - iem.edge.local 
    secretName: iemcert
  rules:
  #
  # Hostname for accessing the IEM e.g. iem.siemens.com
  - host: iem.edge.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            #
            # Servicename of Industrial Edge Gateway
            name: ie8230-gateway-proxy
            port:
              name: kong-proxy
